fix the xcode-select path

--- a/.github/workflows/141306.yml
+++ b/.github/workflows/141306.yml
@@ -15,31 +15,21 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-      - run: ./ring.sh $XCODE_PATH
+      - run: ./ring.sh /Applications/Xcode_15.2.app/Contents/Developer
         working-directory: ./141306
         continue-on-error: true
-        env:
-          XCODE_PATH: "/Applications/Xcode-15.2.0.app/Contents/Developer"
-      - run: ./ring.sh $XCODE_PATH
+      - run: ./ring.sh /Applications/Xcode_15.3.app/Contents/Developer
         working-directory: ./141306
         continue-on-error: true
-        env:
-          XCODE_PATH: "/Applications/Xcode-15.3.0.app/Contents/Developer"
-      - run: ./ring.sh $XCODE_PATH
+      - run: ./ring.sh /Applications/Xcode_15.4.app/Contents/Developer
         working-directory: ./141306
         continue-on-error: true
-        env:
-          XCODE_PATH: "/Applications/Xcode-15.4.0.app/Contents/Developer"
-      - run: ./ring.sh $XCODE_PATH
+      - run: ./ring.sh /Applications/Xcode_16.1.app/Contents/Developer
         working-directory: ./141306
         continue-on-error: true
-        env:
-          XCODE_PATH: "/Applications/Xcode-16.1.0.app/Contents/Developer"
-      - run: ./ring.sh $XCODE_PATH
+      - run: ./ring.sh /Applications/Xcode_16.2.app/Contents/Developer
         working-directory: ./141306
         continue-on-error: true
-        env:
-          XCODE_PATH: "/Applications/Xcode-16.2.0.app/Contents/Developer"
   minimum:
     runs-on: macos-14
     continue-on-error: true
@@ -47,28 +37,18 @@ jobs:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-      - run: ./minimum.sh $XCODE_PATH
+      - run: ./minimum.sh /Applications/Xcode_15.2.app/Contents/Developer
         working-directory: ./141306
         continue-on-error: true
-        env:
-          XCODE_PATH: "/Applications/Xcode-15.2.0.app/Contents/Developer"
-      - run: ./minimum.sh $XCODE_PATH
+      - run: ./minimum.sh /Applications/Xcode_15.3.app/Contents/Developer
         working-directory: ./141306
         continue-on-error: true
-        env:
-          XCODE_PATH: "/Applications/Xcode-15.3.0.app/Contents/Developer"
-      - run: ./minimum.sh $XCODE_PATH
+      - run: ./minimum.sh /Applications/Xcode_15.4.app/Contents/Developer
         working-directory: ./141306
         continue-on-error: true
-        env:
-          XCODE_PATH: "/Applications/Xcode-15.4.0.app/Contents/Developer"
-      - run: ./minimum.sh $XCODE_PATH
+      - run: ./minimum.sh /Applications/Xcode_16.1.app/Contents/Developer
         working-directory: ./141306
         continue-on-error: true
-        env:
-          XCODE_PATH: "/Applications/Xcode-16.1.0.app/Contents/Developer"
-      - run: ./minimum.sh $XCODE_PATH
+      - run: ./minimum.sh /Applications/Xcode_16.2.app/Contents/Developer
         working-directory: ./141306
         continue-on-error: true
-        env:
-          XCODE_PATH: "/Applications/Xcode-16.2.0.app/Contents/Developer"
