--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,5 +1,5 @@
 [toolchain]
-channel = "1.87.0"
+channel = "nightly"
 components = ["rustc", "cargo"]
 profile = "minimal"
 targets = ["x86_64-apple-darwin", "aarch64-linux-android"]
