--- a/.github/workflows/140686.yml
+++ b/.github/workflows/140686.yml
@@ -8,11 +8,27 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  rust:
-    runs-on: macos-15
+  rust-16-2:
+    runs-on: macos-14
     steps:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
-      - run: ./run.sh /Applications/Xcode_16.3.app/Contents/Developer
+      - run: ./run.sh /Applications/Xcode_16.2.app/Contents/Developer
+        working-directory: ./140686/rust/origin
+  rust-15-2:
+    runs-on: macos-14
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+      - run: ./run.sh /Applications/Xcode_15.2.app/Contents/Developer
+        working-directory: ./140686/rust/origin
+  rust-15-2-intel:
+    runs-on: macos-13
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+      - run: ./run.sh /Applications/Xcode_15.2.app/Contents/Developer
         working-directory: ./140686/rust/origin
