--- a/.github/workflows/140686.yml
+++ b/.github/workflows/140686.yml
@@ -8,27 +8,23 @@ env:
   CARGO_TERM_COLOR: always
 
 jobs:
-  rust-16-2:
-    runs-on: macos-14
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: recursive
-      - run: ./run.sh /Applications/Xcode_16.2.app/Contents/Developer
-        working-directory: ./140686/rust/origin
-  rust-15-2:
-    runs-on: macos-14
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          submodules: recursive
-      - run: ./run.sh /Applications/Xcode_15.2.app/Contents/Developer
-        working-directory: ./140686/rust/origin
   rust-15-2-intel:
     runs-on: macos-13
+    strategy:
+      matrix:
+        deployment_target:
+          - "10.12"
+          - "10.13"
+          - "10.14"
+          - "10.15"
+          - "11"
+          - "12"
+          - "13"
     steps:
       - uses: actions/checkout@v4
         with:
           submodules: recursive
       - run: ./run.sh /Applications/Xcode_15.2.app/Contents/Developer
+        env:
+          MACOSX_DEPLOYMENT_TARGET: ${{ matrix.deployment_target }}
         working-directory: ./140686/rust/origin
